external-crates/move/crates/move-compiler/tests/move_2024/matching/enum_visibility.exp
error[E04001]: restricted visibility
   ┌─ tests/move_2024/matching/enum_visibility.move:15:13
   │
15 │             m::E::A(t) => t,
   │             ^^^^^^^^^^ Invalid pattern for '0x42::m::E::A'.
 All enums can only be matched in the module in which they are declared

